# cpp-arcade-app

./: .gitignore  CMakeLists.txt
include/: Utils.h  Vec2D.h
include/App/: App.h
include/Games/: Breakout.h  Game.h
include/Games/Breakout/: Ball.h  Block.h  BoundaryEdge.h  Breakout.h  BreakoutGameLevel.h  Excluder.h  LevelBoundary.h  Paddle.h
include/Graphics/: Color.h  Screen.h  ScreenBuffer.h
include/Input/: GameController.h  InputAction.h  InputController.h
include/Scenes/: ArcadeScene.h  GameScene.h  Scene.h
include/Shapes/: AARectangle.h  Circle.h  Line2D.h  Shape.h  Triangle.h
include/Utils/: FileCommandLoader.h  Utils.h  Vec2D.h
src/: Main.cpp  Utils.cpp
src/App/: App.cpp
src/Games/: Breakout.cpp
src/Games/Breakout/: Ball.cpp  Block.cpp  Breakout.cpp  BreakoutGameLevel.cpp  Excluder.cpp  LevelBoundary.cpp  Paddle.cpp
src/Graphics/: Color.cpp  Screen.cpp  ScreenBuffer.cpp
src/Input/: GameController.cpp  InputController.cpp
src/Scenes/: ArcadeScene.cpp  GameScene.cpp
src/Shapes/: AARectangle.cpp  Circle.cpp  Line2D.cpp  Shape.cpp  Triangle.cpp
src/Utils/: FileCommandLoader.cpp  Utils.cpp  Vec2D.cpp
